[package]
name = "reqwest"
version = "0.7.3" # remember to update html_root_url
description = "higher level HTTP client library"
keywords = ["http", "request", "client"]
repository = "https://github.com/seanmonstar/reqwest"
documentation = "https://docs.rs/reqwest"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]
license = "MIT/Apache-2.0"
categories = ["web-programming::http-client"]

[dependencies]
bytes = "0.4"
futures = "0.1.15"
hyper = "0.11"
libflate = "0.1.11"
log = "0.3"
mime_guess = "2.0.0-alpha.2"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
tokio-core = "0.1.6"
tokio-io = "0.1"
url = "1.2"
uuid = { version = "0.5", features = ["v4"] }

hyper-rustls = "0.12.0"
tokio-rustls = "0.5.0"
rustls = { version = "0.12.0", features = ["dangerous_configuration"] }
webpki = "=0.18.0-alpha"
webpki-roots = "0.14.0"

[dev-dependencies]
env_logger = "0.4"
error-chain = "0.10"
serde_derive = "1.0"

[features]
unstable = []


[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "async"
path = "examples/async.rs"
required-features = ["unstable"]
